[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/BattleMap.gd" type="Script" id=1]
[ext_resource path="res://Graphics/space_background.png" type="Texture" id=2]
[ext_resource path="res://Entities/Airship.tscn" type="PackedScene" id=3]

[node name="BattleMap" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 2, 2 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true

[node name="Stars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1, 1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 1024, 1200 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Stars"]
texture = ExtResource( 2 )
centered = false

[node name="Enemies" type="Node2D" parent="."]

[node name="Airship" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 540 )

[node name="Node2D" type="Node2D" parent="."]

[node name="TopLeftCorner" type="Position2D" parent="Node2D"]
position = Vector2( -512, -600 )

[node name="TopRightCorner" type="Position2D" parent="Node2D"]
position = Vector2( 512, -600 )

[node name="BottomLeftCorner" type="Position2D" parent="Node2D"]
position = Vector2( -512, 600 )

[node name="BottomRighCorner" type="Position2D" parent="Node2D"]
position = Vector2( 512, 600 )

[node name="AlienMove" type="Timer" parent="."]
process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[connection signal="timeout" from="AlienMove" to="." method="_on_AlienMove_timeout"]
